--- a/TrailsTracker/src/main/resources/application.properties
+++ b/TrailsTracker/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#### PORT CONFIG ####
+server.port=8085
 
+#### MYSQL DATASOURCE ####
+spring.datasource.url=jdbc:mysql://localhost:3306/trailsDB?useSSL=false&&useLegacyDatetimeCode=false&serverTimezone=US/Mountain
+spring.datasource.username=trails
+spring.datasource.password=trails
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
