README Table added

--- a/TrailsTracker/src/main/resources/application.properties
+++ b/TrailsTracker/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/trailsDB?useSSL=false&&useLega
 spring.datasource.username=trails
 spring.datasource.password=trails
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jmx.default-domain=EventTracker
